# scan_formation_underwater_mapping

./: CMakeLists.txt  README.md  package.xml
config/: SLAMsetting.yaml
launch/: exampleSlam.launch
rvizconfig/: slamView.rviz
src/: exampleSlamRun.cpp
src/find-peaks/: .gitignore  CHANGELOG  CMakeLists.txt  README.md
src/find-peaks/example/: main.cpp
src/find-peaks/include/findpeaks/: findpeaks.hpp  mask.hpp  persistence.hpp  triangulate_mask.hpp  triangulate_persistence.hpp  union_find.hpp
src/find-peaks/src/: union_find.cpp
src/generalHelpfulTools/include/: PeakFinder.h  generalHelpfulTools.h
src/generalHelpfulTools/src/: PeakFinder.cpp  generalHelpfulTools.cpp
src/generalInterface/include/: generalStructs.h
src/poseGraph/include/: edge.h  graphSlamSaveStructure.h  vertex.h
src/poseGraph/src/: edge.cpp  graphSlamSaveStructure.cpp  vertex.cpp
src/registration/: fourierMellinRegistration.cpp  registrationOfTwoImageScans.cpp  registrationOfTwoPCLScans.cpp  registrationTwoImagesCSV.cpp  registrationTwoPCLScansIPC.cpp  testFeatureRegistration.cpp  understanding3Dso3soft.cpp
src/registration/include/: image_registration.h  scanRegistrationClass.h  sofftCorrelationClass.h  softDescriptorRegistration.h
src/registration/src/: image_dft.cpp  image_registration.cpp  image_transforms.cpp  scanRegistrationClass.cpp  sofftCorrelationClass.cpp  softDescriptorRegistration.cpp
src/slamTools/include/: slamToolsRos.h
src/slamTools/src/: slamToolsRos.cpp
src/soft20/: CMakeLists.txt  package.xml
src/soft20/examples1/: test_soft_fftw_correlate2_wrap.c
src/soft20/src/lib1/: so3_correlate_fftw.c  wrap_s2_rotate_fftw.c  wrap_soft_fftw_cor2.c
